// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopCities when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="grid-row"
  >
    <div
      class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
    >
      <a
        aria-label="top-cities-realtime.csv"
        href="http://www.example.com/data//top-cities-realtime.csv"
      >
        <svg
          aria-hidden="true"
          class="usa-icon margin-bottom-neg-05 margin-left-05"
          focusable="false"
          role="img"
        >
          <use
            xlink:href="/assets/uswds/img/sprite.svg#file_present"
          />
        </svg>
      </a>
      <a
        href="/definitions#dimension_city"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Cities
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The city from which user activity originates. Location data may be affected by a user's VPN usage.
          </span>
        </span>
      </a>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-auto"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="cities chart time filter"
          class="usa-select chart__filter margin-top-0"
        >
          <option
            value="top-cities-realtime"
          >
            30 Minutes
          </option>
          <option
            value="top-cities-yesterday"
          >
            Yesterday
          </option>
          <option
            value="top-cities-7-days"
          >
            7 Days
          </option>
          <option
            value="top-cities-30-days"
          >
            30 Days
          </option>
          <option
            value="top-cities-90-days"
          >
            90 Days
          </option>
          <option
            value="top-cities-current-year"
          >
            Current Year
          </option>
          <option
            value="top-cities-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="top-cities-previous-year"
          >
            Previous Year
          </option>
          <option
            value="top-cities-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="text--capitalize"
  >
    <figure
      id="chart_city"
    >
      <div
        class="data chart__bar-chart margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              West Julianabury
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              19%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 19%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Palm Bay
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              18.3%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 18%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              New Penelopeport
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              14.5%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 14%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              New Alejandrachester
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              11.8%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 12%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Fort Althea
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              11.2%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 11%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Rodriguezshire
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              10.9%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 11%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Felixtown
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              5%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 5%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Alexanebury
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              4.6%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 5%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Erynfort
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              3.7%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 4%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Lake Taya
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              1.2%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 1%;"
            />
          </div>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCities when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="grid-row"
  >
    <div
      class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
    >
      <a
        aria-label="top-cities-realtime.csv"
        href="http://www.example.com/data//top-cities-realtime.csv"
      >
        <svg
          aria-hidden="true"
          class="usa-icon margin-bottom-neg-05 margin-left-05"
          focusable="false"
          role="img"
        >
          <use
            xlink:href="/assets/uswds/img/sprite.svg#file_present"
          />
        </svg>
      </a>
      <a
        href="/definitions#dimension_city"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Cities
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The city from which user activity originates. Location data may be affected by a user's VPN usage.
          </span>
        </span>
      </a>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-auto"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="cities chart time filter"
          class="usa-select chart__filter margin-top-0"
        >
          <option
            value="top-cities-realtime"
          >
            30 Minutes
          </option>
          <option
            value="top-cities-yesterday"
          >
            Yesterday
          </option>
          <option
            value="top-cities-7-days"
          >
            7 Days
          </option>
          <option
            value="top-cities-30-days"
          >
            30 Days
          </option>
          <option
            value="top-cities-90-days"
          >
            90 Days
          </option>
          <option
            value="top-cities-current-year"
          >
            Current Year
          </option>
          <option
            value="top-cities-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="top-cities-previous-year"
          >
            Previous Year
          </option>
          <option
            value="top-cities-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TopCities when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="grid-row"
  >
    <div
      class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
    >
      <a
        aria-label="top-cities-realtime.csv"
        href="http://www.example.com/data//top-cities-realtime.csv"
      >
        <svg
          aria-hidden="true"
          class="usa-icon margin-bottom-neg-05 margin-left-05"
          focusable="false"
          role="img"
        >
          <use
            xlink:href="/assets/uswds/img/sprite.svg#file_present"
          />
        </svg>
      </a>
      <a
        href="/definitions#dimension_city"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Cities
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The city from which user activity originates. Location data may be affected by a user's VPN usage.
          </span>
        </span>
      </a>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-auto"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="cities chart time filter"
          class="usa-select chart__filter margin-top-0"
        >
          <option
            value="top-cities-realtime"
          >
            30 Minutes
          </option>
          <option
            value="top-cities-yesterday"
          >
            Yesterday
          </option>
          <option
            value="top-cities-7-days"
          >
            7 Days
          </option>
          <option
            value="top-cities-30-days"
          >
            30 Days
          </option>
          <option
            value="top-cities-90-days"
          >
            90 Days
          </option>
          <option
            value="top-cities-current-year"
          >
            Current Year
          </option>
          <option
            value="top-cities-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="top-cities-previous-year"
          >
            Previous Year
          </option>
          <option
            value="top-cities-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
